# penumbra

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: Layout.tsx  SignalTable.tsx  SummaryCards.tsx  VolumeChart.tsx
dashboard/src/hooks/: queries.ts
dashboard/src/lib/: format.ts
dashboard/src/pages/: Feed.tsx  (+7 more)
docs/: AUDIT.md  DEPLOYMENT.md  STATISTICAL_REVIEW.md  SUMMARY.md
docs/architecture/: adr-001-duckdb.md  adr-002-modified-zscore.md  adr-003-bedrock-budget.md  adr-004-pipeline-architecture.md
docs/integrations/: aws-bedrock.md  polygon-rpc.md  polymarket.md  supabase.md  tavily-search.md
docs/plans/: PLAN-B-VPIN-LAMBDA-ISOLATION-FOREST.md  PLAN-C-GRAPH-INTELLIGENCE.md  ROADMAP.md
docs/prompts/: IMPLEMENT-PLAN-B-PHASE1.md
docs/sprints/: sprint-0-foundation.md  sprint-1-hose.md  sprint-2-scanner.md  sprint-3-judge.md  sprint-4-sentinel.md
scripts/: backfill.py  calibrate_weights.py  rescore_signals.py  setup_env.py  setup_l2.py
sentinel/: __init__.py  __main__.py  auth.py  budget.py  config.py
sentinel/alerts/: __init__.py
sentinel/api/: __init__.py  deps.py  main.py
sentinel/db/: __init__.py  init.py  supabase_migration_001.sql
sentinel/ingester/: __init__.py  __main__.py  chain_poller.py  listener.py  market_scorer.py  markets.py  models.py  poller.py  writer.py
sentinel/judge/: __init__.py  __main__.py  budget.py  classifier.py  market_scorer.py  news.py  pipeline.py  reasoner.py  store.py
sentinel/scanner/: __init__.py  __main__.py  funding.py  kyle_lambda.py  pipeline.py  price_impact.py  scorer.py  volume.py  vpin.py  wallet_profiler.py
terraform/: ec2.tf  ecr.tf  iam.tf  main.tf  outputs.tf  secrets.tfvars.example  ssm.tf  user_data.sh  variables.tf
tests/: test_config.py  test_integration.py  test_regression.py
tests/api/: conftest.py  test_budget.py  test_health.py  test_markets.py  test_metrics.py  test_signals.py  test_wallets.py
tests/db/: test_init.py
tests/ingester/: test_backfill.py  test_chain_poller.py  test_parser.py  test_poller.py  test_writer.py
tests/judge/: test_budget.py  test_classifier.py  test_news.py  test_parsing.py  test_pipeline.py  test_prompts.py  test_reasoner.py
tests/scanner/: test_funding.py  test_kyle_lambda.py  test_pipeline.py  test_price_impact.py  test_scorer.py  test_volume.py  test_vpin.py  test_wallet_profiler.py
(+6 files in other folders)
