[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penumbra"
version = "0.1.0"
description = "Real-time intelligence agent that monitors Polymarket for Informed Flow"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Private" }

dependencies = [
    # Polymarket
    "py-clob-client>=0.15.0",
    
    # Database
    "duckdb>=1.1.0",
    "pytz>=2024.1",
    
    # AWS Bedrock
    "boto3>=1.35.0",
    
    # Web / HTTP
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Config & Utils
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    
    # Async
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
    "moto[bedrock]>=5.0",
    "respx>=0.22",           # Mock httpx for testing
    "pre-commit>=4.0",
]

[project.scripts]
sentinel = "sentinel.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

# =============================================================================
# Ruff (Linter + Formatter)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (catch stray prints)
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["sentinel"]

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# =============================================================================
# Mypy
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "py_clob_client.*",
    "duckdb.*",
]
ignore_missing_imports = true
